# training-network-v2

./: .gitignore  CLAUDE.md  DEMO_PLAN.md  INSTALL_REVIEW.md  INSTRUCTIONS.md  ONBOARDING.md  README.md  deploy.sh  docker-compose.yml
admin-ui/: package-lock.json  package.json
admin-ui/app/: globals.css  layout.tsx  page.tsx
cli/: Dockerfile  README.md  pyproject.toml
cli/gpunet_cli/: client.py  config.py  main.py  output.py
cli/gpunet_cli/commands/: auth.py  install.py  jobs.py  keys.py  nodes.py
cli/skills/gpu-network/: SKILL.md
cli/tests/: conftest.py  test_client.py  test_commands_auth.py  test_commands_install.py  test_commands_jobs.py  test_commands_keys.py  test_commands_nodes.py  test_config.py
client-ui/: Dockerfile  next.config.ts  package-lock.json  package.json
client-ui/app/: globals.css  layout.tsx  page.tsx
client-ui/app/activate/: page.tsx
client-ui/lib/: api.ts
control-plane/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
control-plane/alembic/: env.py
control-plane/app/: cli.py  config.py  db.py  deps.py  main.py  observability.py
control-plane/public/: install.sh
control-plane/scripts/: README.md
control-plane/tests/: conftest.py  helpers.py
docs/: host-onboarding-wsl.md
docs/decisions/: 001-hybrid-marketplace.md  002-workload-agnostic.md  003-no-platform-storage-v1.md  004-pricing.md  005-unified-client-ui.md
installer-windows/: README.md  build.sh  go.mod  main.go  manifest.xml
node-agent/: go.mod  main.go
node-agent/cmd/: cmd.go  init.go  login.go  login_test.go  start.go  status.go  version.go
(+84 files in other folders)
